# database-reflection

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: adapter.rs  lib.rs  metadata.rs  reflection.rs
src/adapter/: mariadb_innodb.rs  reflection_adapter.rs
src/metadata/: consts.rs  with_metadata.rs
src/reflection/: column.rs  constraint.rs  database.rs  datatypes.rs  index.rs  table.rs
tests/: column_integrity.rs  constraint_integrity.rs  consts_are_public.rs  datatypes_work.rs  index_integrity.rs  integration.rs  with_metadata_trait.rs
