[package]
name = "database-reflection"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "^0.6", features = ["runtime-tokio-rustls"] }
serde = { version = "^1", features = ["derive", "rc"] }
#serde_with = { version = "^3" }
serde_json = { version = "^1" }
indexmap = { version = "^2", features = ["serde"] }

[badges]
maintenance = { status = "actively-developed" }